Firefox Dark: fixed tabs' spacings for vertical mode of Tree Style Tab plugin.

--- a/Candra-Firefox-Dark/chrome/userChrome.css
+++ b/Candra-Firefox-Dark/chrome/userChrome.css
@@ -495,6 +495,17 @@ windowdragbox {
   width: 0 !important;
 }
 
+.tabbrowser-tabs[treestyletab-mode="vertical"] .tab-content {
+  padding-inline-start: 0px !important;
+  padding-inline-end: 0px !important;
+}
+
+.tabbrowser-tabs[treestyletab-mode="vertical"] .tab-close-button {
+  margin-inline-start: 0px !important;
+  margin-inline-end: 0px !important;
+}
+
+
 /* Menus */
 
 panel{
